F&GDEV/src/objects/AgentUpline__c.object
<CustomObject>
    <fields>
        <fullName>AgentIDUplineAgentID__c</fullName>
        <externalId>true</externalId>
        <label>AgentID + Upline AgentID (ID)</label>
        <length>33</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgentID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AgentID</label>
        <referenceTo>AgentID__c</referenceTo>
        <relationshipLabel>Upline</relationshipLabel>
        <relationshipName>AgentUpline</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UplineAgentID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AgentID Name</label>
        <referenceTo>AgentID__c</referenceTo>
        <relationshipLabel>Full Downline</relationshipLabel>
        <relationshipName>FullDownline</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UplineAgentLevel__c</fullName>
        <label>Hierarchy Level</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Upline_Text__c</fullName>
        <formula>UplineAgentID__r.AgentName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Upline Text</label>
        <type>Text</type>
    </fields>
    <label>AgentIDUpline</label>
    <nameField>
        <label>Record</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AgentIDUpline</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>